[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Request_button_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Morning-export.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Report_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/File_text-export.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Cancel_button-export.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main/Request_screen.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Request_choice.png" type="Texture" id=8]

[node name="Request_screen" type="Control" groups=[
"update_font",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.75
margin_right = -1.75
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Julie" type="TextureButton" parent="Buttons"]
margin_left = 176.0
margin_top = 248.0
margin_right = 272.0
margin_bottom = 344.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anna" type="TextureButton" parent="Buttons"]
margin_left = 456.0
margin_top = 248.0
margin_right = 552.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 403.792, 111.206 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jen" type="TextureButton" parent="Buttons"]
margin_left = 744.0
margin_top = 248.0
margin_right = 840.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 116.473, 104.857 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joseph" type="TextureButton" parent="Buttons"]
margin_left = 288.0
margin_top = 392.0
margin_right = 384.0
margin_bottom = 488.0
rect_pivot_offset = Vector2( 403.792, 111.206 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castellan" type="TextureButton" parent="Buttons"]
margin_left = 576.0
margin_top = 392.0
margin_right = 672.0
margin_bottom = 488.0
rect_pivot_offset = Vector2( 116.473, 104.857 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="TextureButton" parent="Buttons"]
margin_left = 856.0
margin_top = 24.0
margin_right = 952.0
margin_bottom = 120.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 816.0
margin_top = 552.0
margin_right = 944.0
margin_bottom = 594.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Julie_label" type="Label" parent="Buttons"]
margin_left = 184.0
margin_top = 344.0
margin_right = 241.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JULIE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anna_label" type="Label" parent="Buttons"]
margin_left = 472.0
margin_top = 344.0
margin_right = 512.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "ANNA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jen_label" type="Label" parent="Buttons"]
margin_left = 744.0
margin_top = 344.0
margin_right = 826.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JEN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joseph_label" type="Label" parent="Buttons"]
margin_left = 304.0
margin_top = 488.0
margin_right = 350.0
margin_bottom = 502.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JOSEPH"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castellan_label" type="Label" parent="Buttons"]
margin_left = 576.0
margin_top = 496.0
margin_right = 658.0
margin_bottom = 510.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "CASTELLAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_label" type="Label" parent="Buttons"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 824.0
margin_top = 560.0
margin_right = 936.0
margin_bottom = 584.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node" parent="."]

[node name="Current_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DAY 1: MORNING"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 72.0
margin_right = 224.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "30S UNTIL NOON"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 48, 48 )
texture = ExtResource( 3 )

[node name="Main_functions" type="Node" parent="."]

[node name="Report" type="TextureButton" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 120.0
margin_right = 72.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report_label" type="Label" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 480.0
margin_top = 56.0
margin_right = 529.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REPORT"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_label" type="Label" parent="Main_functions"]
margin_left = 336.0
margin_top = 128.0
margin_right = 656.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REQUEST INFORMATION
(Click again to verify)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection_box" type="Sprite" parent="."]
position = Vector2( 616, 432 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="Request_progress" type="Label" parent="."]
margin_left = 360.0
margin_top = 544.0
margin_right = 656.0
margin_bottom = 558.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST PROGRESS:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress_2" type="Label" parent="Request_progress"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "0%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Julie" to="." method="_on_Julie_pressed"]
[connection signal="pressed" from="Buttons/Anna" to="." method="_on_Anna_pressed"]
[connection signal="pressed" from="Buttons/Jen" to="." method="_on_Jen_pressed"]
[connection signal="pressed" from="Buttons/Joseph" to="." method="_on_Joseph_pressed"]
[connection signal="pressed" from="Buttons/Castellan" to="." method="_on_Castellan_pressed"]
[connection signal="pressed" from="Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Main_functions/Request" to="." method="_on_Request_pressed"]
